# lark-sentry

./: Makefile  README.md  bootstrap.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.js  tsconfig.json
client/: Makefile  README.md  angular.json  package.json
client/src/: custom-theme.scss  index.html  main.ts
client/src/app/: app.config.ts  app.ts  favorite-list.service.ts  types.ts
client/src/app/favorite-list/: favorite-list.ts
client/src/app/home/: home.ts
client/src/app/movie-card/: movie-card.ts
client/src/app/movie-list/: movie-list.ts
client/src/app/search-list/: search-list.ts
client/src/app/spinner/: spinner.ts
client/src/app/toolbar/: toolbar.ts
server/: config.py  config.yaml  handler.py  kafka.py  logger.py  main.py  pyproject.toml
